tests/errors/test-bad-array-init.script

auto a = [{1, 2}, 3];

//>2:10: error C10: an initializer list cannot be used as the first element of an array
